# vmos-edge

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
FluentUI/: CMakeLists.txt
QtScrcpyCore/include/: QtScrcpyCore.h  QtScrcpyCoreDef.h  adbprocess.h
src/: CMakeLists.txt  language_ar.ts  language_en.ts  language_es.ts  language_fil.ts  language_fr.ts  language_id.ts  language_ja.ts  language_km.ts  language_ko.ts  language_ms.ts  language_pt.ts  language_ru.ts  language_th.ts  language_uk.ts  language_ur.ts  language_vi.ts  language_zh-hant.ts  language_zh.ts  resources.qrc  vmoscloud.entitlements  vmoscloud.icns  vmoscloud.plist.in  vmoscloud.rc  vmosedge.rc.in  vsphone.icns  vsphone.plist.in  vsphone.rc  vsphone.rc.in
src/qml/: AddBoxPopup.qml  AddProxyPopup.qml  App.qml  AppConfig.qml  AppUtils.qml  BoxDetailPopup.qml  BoxListView.qml  ChangeGroupPopup.qml  CloudListView.qml  CreateCloudPhonePopup.qml  ExpandableToolBar.qml  GenericDialog.qml  GridTileLayout.qml  IconButton.qml  IconTabBar.qml  IconTextField.qml  ImageButton.qml  ImageListView.qml  ImportImagePopup.qml  KeyMapper.qml  MainWindow.qml  MultiLanguage.qml  PadWindow.qml  ProxySettingsPopup.qml  RenamePopup.qml  SearchTextField.qml  SettingsView.qml  TabListView.qml  TemplateListView.qml  TextButton.qml  TextButtonEx.qml  ThemeUI.qml  UpgradeCloudPhonePopup.qml  VCheckBox.qml  VIconButton.qml  VRouter.qml  VTextButton.qml  VerifyCodeTextField.qml  qmldir
src/res/: public.pem
src/src/: deviceproxymodel.cpp  deviceproxymodel.h  downloadhandler.cpp  downloadhandler.h  levelproxymodel.cpp  levelproxymodel.h  main.cpp  proxytester.cpp  proxytester.h  selectedlistmodel.cpp  selectedlistmodel.h  structs.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  (+2 more)
(+51 files in other folders)
